fix  alignment

--- a/project/static/page_styles.css
+++ b/project/static/page_styles.css
@@ -43,7 +43,6 @@ table {
     width: 100%; /* Adjust as needed */
     border-collapse: collapse;
     border: 1px solid #ddd;
-    text-align: center;
 }
 
 th, td {
